@@ -143,6 +143,8 @@ Optimizations
 
 * LUCENE-10653: BlockMaxMaxscoreScorer uses heapify instead of individual adds. (Greg Miller)
 
+* LUCENE-10661: Reduce memory copy in BytesStore. (luyuncheng)
+
 Changes in runtime behavior
 ---------------------
 
